--- a/index.html
+++ b/index.html
@@ -1,9 +1,21 @@
 <!DOCTYPE html>
 <html>
 <head>
+  <title>git branches</title>
   <meta charset="utf-8">
 	</head>
 <body>
 
-<h1>test1</h1>
+<header>
+<h1>Helllo</h1>
+</header>
+
+
+<footer>
+	<p>&copy; 2018 Boba</p>
+</footer>
+
+</body>
+</html>
+
 
