--- a/index.html
+++ b/index.html
@@ -2,10 +2,13 @@
 <html>
 <head>
   <meta charset="utf-8">
+  <style>
+  	h1 { color:red; }
+  </style>
 	</head>
 <body>
 
-<h1>test1</h1>
+<h1>Yeah BOYYY</h1>
 
 </body>
 </html>
