--- a/index.html
+++ b/index.html
@@ -8,7 +8,13 @@
 	</head>
 <body>
 
+<header>
 <h1>Yeah BOYYY</h1>
+</header>
+
+<main>
+	<img src="heh.jpg" alt="Капібара">
+</main>
 
 </body>
 </html>
