--- a/index.html
+++ b/index.html
@@ -3,12 +3,18 @@
 <head>
   <meta charset="utf-8">
   <style>
-  	h1 { color:red; }
+  	h1 { color:red; border: 1px solid blue; }
   </style>
 	</head>
 <body>
 
+<header>
 <h1>Yeah BOYYY</h1>
+</header>
+
+<main>
+	<img src="heh.jpg" alt="Капібара">
+</main>
 
 </body>
 </html>
